overflow fix

--- a/src/app/pages/affiliate/affiliate.component.css
+++ b/src/app/pages/affiliate/affiliate.component.css
@@ -133,3 +133,9 @@
 .nav-title {
   @apply text-[13.8px] text-white;
 }
+
+@media(max-width:520px){
+  .card-varient {
+    @apply !w-[95vw]
+  }
+}
