--- a/src/app/pages/referred-users/referred-users.component.css
+++ b/src/app/pages/referred-users/referred-users.component.css
@@ -2,7 +2,7 @@
     @apply pointer-events-none [stroke-width:0] fill-current stroke-current flex-shrink-0 inline-block size-[1em];
   }
   .card-varient {
-    @apply bg-[#0f212e]  text-[#d5dceb] rounded-lg p-6 overflow-hidden relative align-baseline m-0 w-[95vw];
+    @apply bg-[#0f212e]  text-[#d5dceb] rounded-lg p-6 overflow-hidden relative align-baseline m-0 w-full;
   }
   .layout-spacing {
     @apply flex flex-col w-full
@@ -51,6 +51,7 @@ label.stacked.svelte-1wzq4lo {
 
 .scrollY, .scrollX {
     scrollbar-color: #2f4553 transparent;
+    @apply overflow-x-auto
 }
 .table-content {
     @apply w-full relative z-[2] overflow-x-scroll;
@@ -84,3 +85,8 @@ th{
 .control-btn{
     @apply inline-flex stack relative gap-2 justify-center rounded-sm font-semibold whitespace-nowrap  transition disabled:pointer-events-none disabled:opacity-50 focus-visible:outline-2 focus-visible:outline-offset-2 active:scale-[0.98] bg-transparent text-white hover:bg-transparent hover:text-white focus-visible:outline-none text-sm leading-none ;
 }
+@media(max-width:590px){
+    .card-varient {
+      @apply !w-[95vw]
+    }
+  }
